css/emoji-picker.css
.emoji-picker,
.emoji-picker * {
  box-sizing: border-box;
}

.emoji-picker {
  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
  font-size: 16px;
  display: inline-block;
  color: #222427;
  border: 1px solid #d9d9d9;
  border-radius: 5px;
  background: #fff;
}

.emoji-picker .emoji-picker-emoji {
  padding: 6px;
}

.emoji-picker-bar:first-child {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
.emoji-picker-bar:last-child {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.emoji-picker-anchors {
  display: flex;
  justify-content: space-between;
  padding: 0 6px;
  color: #858585;
}

.emoji-picker-anchor {
  position: relative;
  flex: 1;
  text-align: center;
  padding: 12px 4px;
  overflow: hidden;
  transition: color .1s ease-out;
}
.emoji-picker-anchor:hover {
  color: #464646;
}

.emoji-picker-anchor-selected,
.emoji-picker-anchor-selected:hover {
  color: #ae65c5;
}
.emoji-picker-anchor-selected .emoji-picker-anchor-bar {
  bottom: 0;
}

.emoji-picker-anchor-bar {
  position: absolute;
  bottom: -3px; left: 0;
  width: 100%; height: 3px;
  background-color: #ae65c5;
}

.emoji-picker-anchors i {
  display: inline-block;
  width: 100%;
  max-width: 22px;
}

.emoji-picker-anchors svg {
  fill: currentColor;
}

.emoji-picker-scroll {
  overflow: scroll;
  height: 270px;
  padding: 0 6px 6px 6px;
  border: solid #d9d9d9;
  border-width: 1px 0;
}

.emoji-picker-search {
  font-size: 16px;
  display: block;
  width: 100%;
  padding: .2em .6em;
  margin-top: 6px;
  border-radius: 25px;
  border: 1px solid #d9d9d9;
  outline: 0;
}

.emoji-picker-category .emoji-picker-emoji:hover:before {
  z-index: 0;
  content: "";
  position: absolute;
  top: 0; left: 0;
  width: 100%; height: 100%;
  background-color: #f4f4f4;
  border-radius: 100%;
}

.emoji-picker-category-label {
  z-index: 2;
  position: relative;
  position: -webkit-sticky;
  top: 0;
}

.emoji-picker-category-label span {
  display: block;
  width: 100%;
  font-weight: 500;
  padding: 5px 6px;
  background-color: #fff;
  background-color: rgba(255, 255, 255, .95);
}

.emoji-picker-emoji {
  position: relative;
  display: inline-block;
}

.emoji-picker-emoji span {
  z-index: 1;
  position: relative;
}

.emoji-picker-no-results {
  font-size: 14px;
  text-align: center;
  padding-top: 70px;
  color: #858585;
}
.emoji-picker-no-results span {
  display: inline-block;
  vertical-align: middle;
}

.emoji-picker-preview {
  position: relative;
  height: 70px;
}

.emoji-picker-preview-emoji,
.emoji-picker-preview-data,
.emoji-picker-preview-skins {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.emoji-picker-preview-emoji {
  left: 12px;
}

.emoji-picker-preview-data {
  left: 68px; right: 12px;
  word-break: break-word;
}

.emoji-picker-preview-skins {
  right: 30px;
  text-align: right;
}

.emoji-picker-preview-name {
  font-size: 14px;
}

.emoji-picker-preview-shortname {
  font-size: 12px;
  color: #888;
}
.emoji-picker-preview-shortname + .emoji-picker-preview-shortname,
.emoji-picker-preview-shortname + .emoji-picker-preview-emoticon,
.emoji-picker-preview-emoticon + .emoji-picker-preview-emoticon {
  margin-left: .5em;
}

.emoji-picker-preview-emoticon {
  font-size: 11px;
  color: #bbb;
}

.emoji-picker-title span {
  display: inline-block;
  vertical-align: middle;
}

.emoji-picker-title .emoji-picker-emoji {
  padding: 0;
}

.emoji-picker-title-label {
  font-size: 26px;
  font-weight: 500;
}

.emoji-picker-skin-swatches {
  padding: 2px 0;
  border: 1px solid #d9d9d9;
  border-radius: 12px;
  background-color: #fff;
}

.emoji-picker-skin-swatches-opened .emoji-picker-skin-swatch {
  width: 16px;
  padding: 0 2px;
}

.emoji-picker-skin-swatches-opened .emoji-picker-skin-swatch-selected:after {
  opacity: .75;
}

.emoji-picker-skin-swatch {
  display: inline-block;
  width: 0;
  vertical-align: middle;
  transition-property: width, padding;
  transition-duration: .125s;
  transition-timing-function: ease-out;
}

.emoji-picker-skin-swatch:nth-child(1) { transition-delay: 0 }
.emoji-picker-skin-swatch:nth-child(2) { transition-delay: .03s }
.emoji-picker-skin-swatch:nth-child(3) { transition-delay: .06s }
.emoji-picker-skin-swatch:nth-child(4) { transition-delay: .09s }
.emoji-picker-skin-swatch:nth-child(5) { transition-delay: .12s }
.emoji-picker-skin-swatch:nth-child(6) { transition-delay: .15s }

.emoji-picker-skin-swatch-selected {
  position: relative;
  width: 16px;
  padding: 0 2px;
}
.emoji-picker-skin-swatch-selected:after {
  content: "";
  position: absolute;
  top: 50%; left: 50%;
  width: 4px; height: 4px;
  margin: -2px 0 0 -2px;
  background-color: #fff;
  border-radius: 100%;
  pointer-events: none;
  opacity: 0;
  transition: opacity .2s ease-out;
}

.emoji-picker-skin {
  display: inline-block;
  width: 100%; padding-top: 100%;
  max-width: 12px;
  border-radius: 100%;
}

.emoji-picker-skin-tone-1 { background-color: #ffc93a }
.emoji-picker-skin-tone-2 { background-color: #fadcbc }
.emoji-picker-skin-tone-3 { background-color: #e0bb95 }
.emoji-picker-skin-tone-4 { background-color: #bf8f68 }
.emoji-picker-skin-tone-5 { background-color: #9b643d }
.emoji-picker-skin-tone-6 { background-color: #594539 }

